# atlas-ds

./: .gitignore  CMakeLists.txt  README.md
docs/: dynamic-array-void.md  dynamic-array.md  index.md
include/atlas/: array.h  array_void.h  status.h
src/: array.c  array_void.c
tests/: CMakeLists.txt  test_array.c  test_array_void.c
